# gera-dovana-categorizer

./: .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  build.bat  build.sh  categories_tree.md  latvian_categories_tree.md  lithuanian_categories_tree.md  polish_categories_tree.md  product_categorizer.spec  product_sort_instructions.md  pyproject.toml
.github/workflows/: macos-build.yml  release.yml  windows-build.yml
categories/: categories.py  categories_lt.py  categories_lv.py  categories_pl.py
prompts/: latvian_v1.py  lithuanian_v1.py  polish_v1.py  v1.py
src/: __init__.py  config.py  core.py  csv_service.py  exceptions.py  gui.py  llm_service.py  logging_utils.py  main.py
tests/: __init__.py  conftest.py  test_config.py  test_core.py  test_csv_service.py  test_integration.py  test_llm_service.py
